# technologies

./: .gitignore  README.md
graphql/: README.md  index.js  package-lock.json  package.json
nginx/: README.md  api-gateway.conf  load-balancing.conf  misc.conf  mtls.conf  rate-limiting.conf  static.conf
prometheus/: README.md  config.yaml
protobuf/: CMakeLists.txt  README.md
redis/: README.md  geo.md  hashes.md  script.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
terraform-k8s/: README.md  main.tf
terraform/s3/: main.tf  outputs.tf  variables.tf
